--- a/app/src/main/res/values-es/self_destruct_time.xml
+++ b/app/src/main/res/values-es/self_destruct_time.xml
@@ -13,7 +13,7 @@
     <string name="text_every_fifteen_seconds">15 segundos</string>
     <string name="text_every_thirty_seconds">30 segundos</string>
     <string name="text_every_one_minute">1 minuto</string>
-    <string name="text_every_ten_minutes">10 minutes</string>
+    <string name="text_every_ten_minutes">10 minutos</string>
     <string name="text_every_twelve_hours">12 horas</string>
     <string name="text_every_one_day">1 día</string>
 </resources>
