--- a/app/src/main/res/layout/emoji_keyboard_page_fragment_item.xml
+++ b/app/src/main/res/layout/emoji_keyboard_page_fragment_item.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-    </data>
+    <data />
 
-    <androidx.emoji.widget.EmojiTextView
+    <androidx.emoji.widget.EmojiAppCompatTextView
         android:id="@+id/textView_emoji"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textColor="@color/colorPrimary"
-        android:textAlignment="center"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:fontFamily="@font/noto_color_emoji_compat"
         android:gravity="center"
+        android:padding="2dp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="32sp"
         tools:text="😎" />
 </layout>
