--- a/app/src/main/res/layout/security_settings_fragment.xml
+++ b/app/src/main/res/layout/security_settings_fragment.xml
@@ -6,8 +6,12 @@
     <data>
 
         <variable
-            name="viewModel"
-            type="com.naposystems.pepito.ui.securitySettings.SecuritySettingsViewModel" />
+        name="viewModel"
+        type="com.naposystems.pepito.ui.securitySettings.SecuritySettingsViewModel" />
+
+        <variable
+            name="selfDestructViewModel"
+            type="com.naposystems.pepito.ui.selfDestructTime.SelfDestructTimeViewModel" />
     </data>
 
     <ScrollView
@@ -77,7 +81,7 @@
                     app:layout_constraintEnd_toEndOf="@id/textView_message_title"
                     app:layout_constraintStart_toStartOf="@id/textView_message_title"
                     app:layout_constraintTop_toBottomOf="@id/textView_message_title"
-                    app:selfDestructTime="@{viewModel.selfDestructTime}"
+                    app:selfDestructTime="@{selfDestructViewModel.selfDestructTimeGlobal}"
                     tools:text="1 día" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -168,7 +172,7 @@
                     app:layout_constraintEnd_toEndOf="@id/textView_message_not_send_title"
                     app:layout_constraintStart_toStartOf="@id/textView_message_not_send_title"
                     app:layout_constraintTop_toBottomOf="@id/option_message_self_destruct_time_not_sent"
-                    app:messageSelfDestructTimeNotSent="@{viewModel.messageSelfDestructTimeNotSent}"
+                    app:messageSelfDestructTimeNotSent="@{selfDestructViewModel.messageSelfDestructTimeNotSent}"
                     tools:text="1 día" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
