--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <attr name="showOnlySendIcon" format="boolean" />
+
     <declare-styleable name="EnterCodeWidget">
         <attr name="numBoxes" format="integer" />
         <attr name="isSecureText" format="boolean" />
@@ -7,7 +10,7 @@
     </declare-styleable>
 
     <declare-styleable name="FabIconSend">
-        <attr name="showOnlySendIcon1" format="boolean" />
+        <attr name="showOnlySendIcon" />
     </declare-styleable>
 
     <declare-styleable name="SearchView">
@@ -23,12 +26,14 @@
         <attr name="showEmojiIcon" format="boolean" />
         <attr name="showCameraIcon" format="boolean" />
         <attr name="showAttachmentIcon" format="boolean" />
-        <attr name="showOnlySendIcon" format="boolean" />
-        <attr name="showQuote" format="boolean"/>
+        <attr name="showOnlySendIcon" />
+        <attr name="showQuote" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="Quote">
-        <attr name="test" format="boolean"/>
+        <attr name="isCancelable" format="boolean" />
+        <attr name="isGoTo" format="boolean" />
+        <attr name="isFromInputPanel" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="AnimatedTwoVectorView">
@@ -47,38 +52,38 @@
     </declare-styleable>
 
     <!--//Background-->
-    <attr name="attrBackgroundColorPrimary" format ="reference"/>
-    <attr name="attrBackgroundSectionColor" format ="reference"/>
-    <attr name="attrBackgroundSectionOtherColor" format ="reference"/>
-    <attr name="attrBackgroundColorBackground" format ="reference"/>
-    <attr name="attrBackgroundColorBackgroundDialog" format ="reference"/>
-    <attr name="attrColorTextButtonTintCamera" format ="reference"/>
-    <attr name="attrBackgroundColorActionMode" format ="reference"/>
-    <attr name="attrBackgroundBatchMessage" format ="reference"/>
+    <attr name="attrBackgroundColorPrimary" format="reference" />
+    <attr name="attrBackgroundSectionColor" format="reference" />
+    <attr name="attrBackgroundSectionOtherColor" format="reference" />
+    <attr name="attrBackgroundColorBackground" format="reference" />
+    <attr name="attrBackgroundColorBackgroundDialog" format="reference" />
+    <attr name="attrColorTextButtonTintCamera" format="reference" />
+    <attr name="attrBackgroundColorActionMode" format="reference" />
+    <attr name="attrBackgroundBatchMessage" format="reference" />
 
     <!--//Tint-->
     <attr name="attrTintColorSecondaryDark" format="reference" />
 
     <!--TextColor-->
-    <attr name="attrTextColorPrimaryTextColor" format ="reference"/>
-    <attr name="attrTextColorSecondaryTextColor" format ="reference"/>
-    <attr name="attrTextColorButtonTint" format ="reference"/>
-    <attr name="attrTextColorRed" format ="reference"/>
-    <attr name="attrTextColorWhite" format ="reference"/>
-    <attr name="attrTextColorMessageAndTimeHome" format ="reference"/>
-    <attr name="attrTextColorColorTextMyMessage" format ="reference"/>
-    <attr name="attrTextColorColorTextIncomingMessage" format ="reference"/>
-    <attr name="attrTextColorLinkTextColor" format ="reference"/>
-    <attr name="attrTextColorColorError" format ="reference"/>
-    <attr name="attrTextColorColorPrimary" format ="reference"/>
-    <attr name="attrTextColorHint" format ="reference"/>
-    <attr name="attrTextColorNameConversation" format ="reference"/>
-    <attr name="attrTextColorNicknameConversation" format ="reference"/>
-    <attr name="attrTextColorHintConversationInputPanel" format ="reference"/>
-    <attr name="attrTextColorConversationInputPanel" format ="reference"/>
+    <attr name="attrTextColorPrimaryTextColor" format="reference" />
+    <attr name="attrTextColorSecondaryTextColor" format="reference" />
+    <attr name="attrTextColorButtonTint" format="reference" />
+    <attr name="attrTextColorRed" format="reference" />
+    <attr name="attrTextColorWhite" format="reference" />
+    <attr name="attrTextColorMessageAndTimeHome" format="reference" />
+    <attr name="attrTextColorColorTextMyMessage" format="reference" />
+    <attr name="attrTextColorColorTextIncomingMessage" format="reference" />
+    <attr name="attrTextColorLinkTextColor" format="reference" />
+    <attr name="attrTextColorColorError" format="reference" />
+    <attr name="attrTextColorColorPrimary" format="reference" />
+    <attr name="attrTextColorHint" format="reference" />
+    <attr name="attrTextColorNameConversation" format="reference" />
+    <attr name="attrTextColorNicknameConversation" format="reference" />
+    <attr name="attrTextColorHintConversationInputPanel" format="reference" />
+    <attr name="attrTextColorConversationInputPanel" format="reference" />
 
     <!--ActionBarItem-->
-    <attr name="attrActionBarItemBackground" format ="reference"/>
+    <attr name="attrActionBarItemBackground" format="reference" />
 
     <!--HintTextColor-->
     <attr name="attrHintTextColorSecondaryTextColor" format="reference" />
@@ -87,9 +92,9 @@
     <attr name="attrIconTintWhite" format="reference" />
 
     <!--BackgroundTint-->
-    <attr name="attrBackgroundTintColorSecondary" format ="reference"/>
-    <attr name="attrBackgroundTintButtonTint" format ="reference"/>
-    <attr name="attrBackgroundTintIconToolbar" format ="reference"/>
+    <attr name="attrBackgroundTintColorSecondary" format="reference" />
+    <attr name="attrBackgroundTintButtonTint" format="reference" />
+    <attr name="attrBackgroundTintIconToolbar" format="reference" />
 
     <!--StrokeColor-->
     <attr name="attrStrokeColorButtonTint" format="reference" />
@@ -112,10 +117,10 @@
     <attr name="attrErrorIconTintColorError" format="reference" />
 
     <!--fabIconColor-->
-    <attr name="attrFabIconColor" format ="reference"/>
+    <attr name="attrFabIconColor" format="reference" />
 
     <!--conversationIconColor-->
-    <attr name="attrConversationIconColor" format ="reference"/>
+    <attr name="attrConversationIconColor" format="reference" />
 
     <!--Color-->
     <attr name="attrColorButtonTint" format="reference" />
@@ -127,7 +132,7 @@
     <attr name="attrSeparatorColor" format="reference" />
 
     <!--Drawer-->
-    <attr name="attrIconAndTextColorDrawer" format ="reference"/>
+    <attr name="attrIconAndTextColorDrawer" format="reference" />
 
     <!-- Seekbar Progress Tint -->
     <attr name="attrSeekbarProgressTint" format="reference" />
