--- a/app/src/main/res/layout/input_panel_quote.xml
+++ b/app/src/main/res/layout/input_panel_quote.xml
@@ -8,6 +8,10 @@
         <variable
             name="messageAndAttachment"
             type="com.naposystems.pepito.entity.message.MessageAndAttachment" />
+
+        <variable
+            name="isFromInputPanel"
+            type="Boolean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,13 +24,13 @@
             android:id="@+id/container_quote"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_quote"
             android:paddingStart="@dimen/normal_padding"
             android:paddingEnd="0dp"
-            android:visibility="visible"
-            app:layout_constraintStart_toStartOf="parent"
+            app:userBackground="@{messageAndAttachment}"
+            app:isFromInputPanelQuote="@{isFromInputPanel}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -35,23 +39,28 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/small_margin"
-                android:text="User"
                 android:textColor="@color/red"
+                app:isFromInputPanelQuote="@{isFromInputPanel}"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:userQuote="@{messageAndAttachment}"
+                tools:text="User" />
 
             <ImageView
                 android:id="@+id/imageView_type_quote"
                 android:layout_width="16dp"
-                android:layout_height="0dp"
+                android:layout_height="20dp"
                 android:layout_marginEnd="4dp"
                 android:src="@drawable/ic_insert_emoticon_black"
-                android:visibility="visible"
+                android:visibility="gone"
+                app:attachmentTypeQuote="@{messageAndAttachment}"
+                app:isFromInputPanelQuote="@{isFromInputPanel}"
                 app:layout_constraintEnd_toStartOf="@id/textView_message_quote"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textView_message_quote"
-                app:tint="@color/secondaryTextColor"
-                tools:src="@drawable/ic_insert_emoticon_black" />
+                app:tint="@color/colorSecondaryDark"
+                tools:src="@drawable/ic_insert_emoticon_black"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/textView_message_quote"
@@ -62,12 +71,13 @@
                 android:layout_marginBottom="@dimen/small_margin"
                 android:ellipsize="end"
                 android:maxLines="3"
-                android:text="@{messageAndAttachment.message.body}"
+                app:bodyQuote="@{messageAndAttachment}"
+                app:isFromInputPanelQuote="@{isFromInputPanel}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imageView_quote"
                 app:layout_constraintStart_toEndOf="@id/imageView_type_quote"
                 app:layout_constraintTop_toBottomOf="@id/textView_title_quote"
-                tools:text="@tools:sample/lorem[25]" />
+                tools:text="@tools:sample/lorem[15]" />
 
             <ImageView
                 android:id="@+id/imageView_quote"
@@ -75,11 +85,13 @@
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
                 android:visibility="gone"
-                app:imageAttachment="@{messageAndAttachment}"
+                app:imageQuote="@{messageAndAttachment}"
+                app:isFromInputPanelQuote="@{isFromInputPanel}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/vertical_photo" />
+                tools:src="@drawable/vertical_photo"
+                tools:visibility="visible" />
             <!--    app:imageQuote='@{""}'-->
 
 
@@ -92,6 +104,7 @@
                 android:padding="@dimen/normal_padding"
                 android:src="@drawable/ic_close_black_24"
                 android:tint="@color/gray_8B8989"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
