--- a/app/src/main/res/layout/input_panel_widget.xml
+++ b/app/src/main/res/layout/input_panel_widget.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -31,20 +32,23 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:visibility="gone"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:maxHeight="150dp"
+                app:layout_constraintBottom_toTopOf="@id/container_input_options"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/container_input_options">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <com.naposystems.pepito.ui.custom.inputPanel.InputPanelQuote
                     android:id="@+id/layout_quote"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:visibility="gone"
+                    app:isCancelable="true"
+                    app:isFromInputPanel="true"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -52,9 +56,10 @@
                 android:id="@+id/container_input_options"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintTop_toBottomOf="@id/container_quote">
 
                 <ImageButton
                     android:id="@+id/imageButton_emoji"
@@ -81,10 +86,10 @@
                     android:scrollbarThumbVertical="@color/colorSecondaryDark"
                     android:scrollbars="vertical"
                     android:singleLine="false"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/container_action_input"
                     app:layout_constraintStart_toEndOf="@id/imageButton_emoji"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/container_action_input"
@@ -100,7 +105,7 @@
                         style="@style/OptionEndIcon"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_marginEnd="@dimen/small_margin"
+                        android:layout_marginEnd="@dimen/normal_margin"
                         android:src="@drawable/ic_attachment_black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/imageButton_camera" />
@@ -129,6 +134,7 @@
             android:elevation="1dp"
             android:src="@drawable/anim_mic_send"
             app:elevation="0dp"
+            app:showOnlySendIcon="false"
             app:fabCustomSize="@dimen/conversation_fab_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
