--- a/app/src/main/res/layout/security_settings_fragment.xml
+++ b/app/src/main/res/layout/security_settings_fragment.xml
@@ -90,6 +90,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/option_allow_download"
                 style="@style/Option"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/option_message_self_destruct">
@@ -330,6 +331,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/option_mask_app"
                 style="@style/Option"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textView_general">
